unpackaged/main/default/objects/Mission__c/fields/Airline__c.field-meta.xml
<CustomField>
    <fullName>Airline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Airline</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Airline__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Airline__c</referenceTo>
    <relationshipLabel>Missions</relationshipLabel>
    <relationshipName>Missions</relationshipName>
    <type>Lookup</type>
</CustomField>