unpackaged/main/default/objects/Mission__c/fields/Codename__c.field-meta.xml
<CustomField>
    <fullName>Codename__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Codename</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>