unpackaged/main/default/objects/Mission__c/fields/Mission_Name__c.field-meta.xml
<CustomField>
    <fullName>Mission_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mission Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>