unpackaged/main/default/objects/Mission__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The Mission&#39;s Status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mission Requested</fullName>
                <default>true</default>
                <label>Mission Requested</label>
            </value>
            <value>
                <fullName>Mission Preparation</fullName>
            </value>
            <value>
                <fullName>Mission Execution</fullName>
            </value>
            <value>
                <fullName>Mission Complete</fullName>
            </value>
            <value>
                <fullName>Mission Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>