unpackaged/main/default/objects/Mission__c/fields/Total_Number_Of_Buses__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_Of_Buses__c</fullName>
    <label>Total Number Of Buses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>