unpackaged/main/default/objects/Mission__c/fields/Total_Number_of_Travelers__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Travelers__c</fullName>
    <label>Total Number of Travelers</label>
    <summaryForeignKey>Traveler__c.Mission__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>