unpackaged/main/default/objects/Mission__c/fields/Travelers_Arrived__c.field-meta.xml
<CustomField>
    <fullName>Travelers_Arrived__c</fullName>
    <description>Total number of travelers arrived at an Overland Mission Destination</description>
    <label>Travelers Arrived</label>
    <summaryFilterItems>
        <field>Traveler__c.Relocation_Status__c</field>
        <operation>equals</operation>
        <value>Arrived at Third Country</value>
    </summaryFilterItems>
    <summaryForeignKey>Traveler__c.Mission__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>