unpackaged/main/default/objects/Mission__c/fields/Travelers_Arrived_in_RRC__c.field-meta.xml
<CustomField>
    <fullName>Travelers_Arrived_in_RRC__c</fullName>
    <description>Roll up summary to add up all travelers on a mission that have arrived in the RRC</description>
    <label>Travelers Arrived in RRC</label>
    <summaryFilterItems>
        <field>Traveler__c.Relocation_Status__c</field>
        <operation>equals</operation>
        <value>Arrival in the RRC</value>
    </summaryFilterItems>
    <summaryForeignKey>Traveler__c.Mission__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>