unpackaged/main/default/objects/Mission__c/validationRules/End_Date_Before_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Before_Start_Date</fullName>
    <active>true</active>
    <description>This rule is to ensure there is not an end date that is before the start date of a mission</description>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End date cannot be before start date</errorMessage>
</ValidationRule>