unpackaged/main/default/objects/Mission__c/listViews/Active_Missions.listView-meta.xml
<ListView>
    <fullName>Active_Missions</fullName>
    <columns>NAME</columns>
    <columns>Codename__c</columns>
    <columns>Airline__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Total_Number_of_Travelers__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Mission Execution</value>
    </filters>
    <label>Active Mission</label>
</ListView>