unpackaged/main/default/objects/Mission__c/listViews/All_Missions.listView-meta.xml
<ListView>
    <fullName>All_Missions</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Codename__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Number_of_Travelers__c</columns>
    <columns>Travelers_Arrived_in_RRC__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Missions</label>
</ListView>